# 24-25-pz-inf-l3_g1_km

./: .gitignore  README.md
backend/: pom.xml
backend/javadoc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  type-search-index.js
backend/javadoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
backend/uploads/: .gitignore
frontend/: .gitignore  electron-builder.json5  index.html  jest.config.cjs  main.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/dist-electron/: main.js  preload.mjs
frontend/electron/: config.default.json  ipcHandlers.js  main.js  main.ts  preload.js  preload.ts
frontend/electron/core/: apiClient.js  tokenStore.js
frontend/source/auth/: login.html  login.js
frontend/source/home/: home.html  home.js
frontend/source/shared/: alertService.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AddCleaningRequestForm.tsx  AddInvoiceForm.tsx  AddRepairRequestForm.tsx  AddReservationForm.tsx  (+39 more)
installer/: .gitignore  Cargo.toml  build.rs
installer/installer/: .gitignore  Cargo.toml  app.rc  installer.iss  setup.ps1
installer/installer/src/: main.rs
installer/src/: main.rs
schema/: erd.dbml
uml/: ERD.txt
(+263 files in other folders)
