[package]
name = "installer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
egui = "0.31.1"
which = "4"
winreg = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
mysql = "24.0"
rust-embed = "8"

